--- a/test-project-groovy/build.gradle
+++ b/test-project-groovy/build.gradle
@@ -33,17 +33,17 @@ subprojects {
     }
 
     dependencies {
-        implementation 'org.codehaus.groovy:groovy-all:2.5.4'
+        implementation 'org.codehaus.groovy:groovy:3.0+'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
         testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     }
 
-//    javadoc {
-//        moduleOptions {
-//            addModules = ['java.sql']
-//        }
-//    }
-//
-//    build.dependsOn javadoc
+    javadoc {
+        moduleOptions {
+            addModules = ['java.sql']
+        }
+    }
+
+    build.dependsOn javadoc
 }
