--- a/test-project-groovy/smoke_test_build.gradle
+++ b/test-project-groovy/smoke_test_build.gradle
@@ -27,7 +27,7 @@ subprojects {
     }
 
     dependencies {
-        implementation 'org.codehaus.groovy:groovy-all:2.5.4'
+        implementation 'org.codehaus.groovy:groovy:3.0+'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
         testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
