--- a/test-project/greeter.javaexec/build.gradle
+++ b/test-project/greeter.javaexec/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 }
 
 patchModules.config = [
-        'java.annotation=jsr305-3.0.2.jar'
+        'java.annotation=jsr305-3.0.2.jar,jsr250-api-1.0.jar'
 ]
 
 new File("$projectDir/src/main/java/demo").eachFileMatch(~/Demo.*\.java/) { file ->
