--- a/test-project/greeter.provider/build.gradle
+++ b/test-project/greeter.provider/build.gradle
@@ -2,12 +2,13 @@ dependencies {
     implementation project(':greeter.api')
     compile 'javax.annotation:javax.annotation-api:1.3.2'
     compile 'com.google.code.findbugs:jsr305:3.0.2'
+    compile 'javax.annotation:jsr250-api:1.0'
 
     testImplementation 'org.hamcrest:hamcrest:2.1+'
 }
 
 patchModules.config = [
-        'java.annotation=jsr305-3.0.2.jar'
+        'java.annotation=jsr305-3.0.2.jar,jsr250-api-1.0.jar'
 ]
 
 javadoc {
