--- a/test-project/greeter.runner/build.gradle
+++ b/test-project/greeter.runner/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 patchModules.config = [
-        'java.annotation=jsr305-3.0.2.jar'
+        'java.annotation=jsr305-3.0.2.jar,jsr250-api-1.0.jar'
 ]
 
 run {
