--- a/test-project/greeter.startscripts/build.gradle
+++ b/test-project/greeter.startscripts/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 }
 
 patchModules.config = [
-        'java.annotation=jsr305-3.0.2.jar'
+        'java.annotation=jsr305-3.0.2.jar,jsr250-api-1.0.jar'
 ]
 
 application {
