--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ dependencies {
 gradlePlugin {
     plugins {
         modulesPlugin {
-            id = 'org.javamodularity.moduleplugin'
+            id = 'com.github.beryx.gradle-modules-plugin'
             displayName = 'Java Modularity Gradle Plugin'
             description = 'Plugin that makes it easy to work with the Java Platform Module System'
             implementationClass = 'org.javamodularity.moduleplugin.ModuleSystemPlugin'
